--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "prism-media": "^1.3.4",
+    "flac-bindings": "^2.7.2",
     "@discordjs/opus": "^0.9.0",
     "@types/fluent-ffmpeg": "^2.1.24",
     "fluent-ffmpeg": "^2.1.2",
